Allow bib and biblocal blocks to reset numbering, fix label spacing

--- a/css/style.scss
+++ b/css/style.scss
@@ -578,12 +578,15 @@ figcaption {
 
 /* Bibliography */
 
-#refs.references {
+.references.csl-bib-body {
   margin-bottom: 20px;
   // text-align: start;
 }
 
 .csl-entry {
+  display: grid;
+  grid-template-columns: max-content 1fr;
+  column-gap: 1rem;
   margin-bottom: 15px;
   line-height: 1.4;
   text-align: start;
@@ -594,15 +597,12 @@ figcaption {
 }
 
 .csl-left-margin {
-  float: left;
-  width: 45px;
-  // text-align: right;
   color: $blue;
   font-weight: bold;
 }
 
 .csl-right-inline {
-  margin-left: 45px;
+  min-width: 0;
 }
 
 /* Icons */
